Basic server/client scaffolding. Added a script to modify the swagger to support connexion and bravado properly. Need to run using sh tools/prepare_swagger.sh after running cwltool.
